--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.65.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
