--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:restart": "node scripts/dev-restart.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
